<resources>
    <string name="app_name">Chats-Kotlin</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>

    <string name="item_chats">Chats</string>
    <string name="tv_titulo">Titulo</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_Login">Inicio de Sesion</string>
    <string name="et_Email">Correo Electronico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Iniciar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="tv_Registrarme">¡No tengo cuenta, Registrarme!</string>

    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_provedorr"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <string name="txt_Registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R_Password">Repetie contraseña</string>
    <string name="btn_Registrar">Registrar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="cerrar_Sesion">Cerrar Sesion</string>
    <string name="default_web_client_id">212219351369-p04k0uc7bu8etrvoefgv95hrvngiu9ep.apps.googleusercontent.com</string>

    <string name="Txt_titulo_edit">Actualizar</string>

</resources>