<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginEmailActivity">

    <!--Email-->
    <TextView
        android:text="@string/txt_Login"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@color/morado"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <!--Icon-->
    <ImageView
        android:src="@drawable/login_usuario"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Ingresar"
        android:text="@string/btn_Ingresar"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        app:cornerRadius="15dp"
        android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Registrar"
            android:text="@string/tv_Registrarme"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/morado"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>